--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "vue"
   ],
   "engines": {
-    "node": ">=4",
-    "npm": ">=3"
+    "node": "5.5.0",
+    "npm": "3.3.12"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production node build/build.js",
@@ -31,7 +31,7 @@
     "lint": "eslint --ext .js .vue client/*",
     "lint:fix": "eslint --fix --ext .js .vue electron.js client/* build/* config/*",
     "test": "echo lol",
-	"start": "cross-env NODE_ENV=production node build/build.js"
+	"start": "cross-env NODE_ENV=development node build/dev-server.js"
   },
   "dependencies": {
     "animate.css": "3.5.2",
