--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "lint": "eslint --ext .js .vue client/*",
     "lint:fix": "eslint --fix --ext .js .vue electron.js client/* build/* config/*",
     "test": "echo lol",
-	"start": "cross-env NODE_ENV=development node build/dev-server.js"
+	"start": "node build/dev-server.js"
   },
   "dependencies": {
     "animate.css": "3.5.2",
