--- a/package.json
+++ b/package.json
@@ -75,6 +75,13 @@
     "wysiwyg.css": "0.0.2"
   },
   "dependencies": {
+    "animate.css": "3.5.2",
+    "animejs": "1.1.3",
+    "axios": "^0.15.3",
+    "bulma": "0.3.1",
+    "font-awesome": "4.7.0",
+    "mdi": "1.7.22",
+    "plotly.js": "1.21.2",
     "autoprefixer": "^6.6.0",
     "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
@@ -120,6 +127,38 @@
     "webpack": "2.2.1",
     "webpack-dev-middleware": "^1.9.0",
     "webpack-hot-middleware": "^2.14.0",
-    "webpack-merge": "^2.0.0"
+    "webpack-merge": "^2.0.0",
+    "vue": "2.1.10",
+    "vue-bulma-brace": "^0.0.3",
+    "vue-bulma-breadcrumb": "github:vue-bulma/breadcrumb",
+    "vue-bulma-card": "^1.0.2",
+    "vue-bulma-chartist": "github:vue-bulma/chartist",
+    "vue-bulma-chartjs": "^1.0.4",
+    "vue-bulma-collapse": "1.0.3",
+    "vue-bulma-datepicker": "^1.2.8",
+    "vue-bulma-emoji": "github:vue-bulma/emoji",
+    "vue-bulma-expanding": "github:vue-bulma/expanding",
+    "vue-bulma-jump": "github:vue-bulma/jump",
+    "vue-bulma-message": "1.1.0",
+    "vue-bulma-modal": "1.0.1",
+    "vue-bulma-notification": "1.1.0",
+    "vue-bulma-progress-bar": "github:vue-bulma/progress-bar",
+    "vue-bulma-progress-tracker": "0.0.4",
+    "vue-bulma-quill": "0.0.1",
+    "vue-bulma-rating": "github:vue-bulma/rating",
+    "vue-bulma-slider": "^1.0.2",
+    "vue-bulma-switch": "1.0.2",
+    "vue-bulma-tabs": "^1.1.2",
+    "vue-bulma-tooltip": "^1.0.2",
+    "vue-cleave": "1.1.1",
+    "vue-handsontable": "github:vue-bulma/handsontable",
+    "vue-jsonp": "^0.1.4",
+    "vue-lory": "0.0.4",
+    "vue-nprogress": "0.1.5",
+    "vue-peity": "0.5.0",
+    "vue-router": "2.1.1",
+    "vuex": "2.1.1",
+    "vuex-router-sync": "4.0.2",
+    "wysiwyg.css": "0.0.2"
   }
 }
